--- a/package.json
+++ b/package.json
@@ -14,25 +14,27 @@
     "@types/dat.gui": "^0.7.13",
     "@whatisjery/react-fluid-distortion": "^1.4.4",
     "dat.gui": "^0.7.9",
+    "jquery": "^3.7.1",
     "leva": "^0.10.0",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.20.0",
     "matter-wrap": "^0.2.0",
     "next": "15.3.1",
+    "postcss": "^8.5.3",
     "postprocessing": "^6.37.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/matter-js": "^0.19.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5"
   }
 }
